@@ -1328,6 +1328,9 @@ class SQLObject(object):
     def createJoinTables(cls, ifNotExists=False, connection=None):
         conn = connection or cls._connection
         for join in cls._getJoinsToCreate():
+            if not getattr(join, 'createRelatedTable', True):
+                # This join has requested not to be created
+                continue
             if (ifNotExists and
                 conn.tableExists(join.intermediateTable)):
                 continue
@@ -1338,6 +1341,9 @@ class SQLObject(object):
         conn = connection or cls._connection
         sql = []
         for join in cls._getJoinsToCreate():
+            if not getattr(join, 'createRelatedTable', True):
+                # This join has requested not to be created
+                continue
             sql.append(conn._SO_createJoinTableSQL(join))
         return '\n'.join(sql)
     createJoinTablesSQL = classmethod(createJoinTablesSQL)
