@@ -422,8 +422,7 @@ class Command(object):
         
     def config_from_egg(self, egg_spec, warn_no_sqlobject=True):
         import pkg_resources
-        pkg_resources.require(egg_spec)
-        dist = pkg_resources.working_set.find(pkg_resources.Requirement(egg_spec))
+        dist = pkg_resources.get_distribution(egg_spec)
         if not dist.has_metadata('sqlobject.txt'):
             if warn_no_sqlobject:
                 print 'No sqlobject.txt in %s egg info' % egg_spec
@@ -837,6 +836,12 @@ class CommandRecord(Command):
                               + '_' + dbName + '.sql')
             if sim:
                 continue
+            create, constraints = cls.createTableSQL()
+            if constraints:
+                constraints = '\n-- Constraints:\n%s\n' % (
+                    '\n'.join(constraints))
+            else:
+                constraints = ''
             files[fn] = ''.join([
                 '-- Exported definition from %s\n'
                 % time.strftime('%Y-%m-%dT%H:%M:%S'),
@@ -844,8 +849,9 @@ class CommandRecord(Command):
                 % (cls.__module__, cls.__name__),
                 '-- Database: %s\n'
                 % dbName,
-                cls.createTableSQL().strip(),
-                '\n'])
+                create.strip(),
+                '\n',
+                constraints])
         last_version_dir = self.find_last_version()
         if last_version_dir and not self.options.force_create:
             if v > 1:
