@@ -16,6 +16,12 @@ SQLObject 0.7.1
 
 .. _psycopg2: http://initd.org/projects/psycopg2
 
+* ``RelatedJoin`` and ``SQLRelatedJoin`` objects have a
+  ``createRelatedTable`` keyword argument (default ``True``).  If
+  ``False``, then the related table won't be automatically created;
+  instead you must manually create it (e.g., with explicit SQLObject
+  classes for the joins).
+
 SQLObject 0.7.0
 ===============
 
